--- a/iOS/More.html
+++ b/iOS/More.html
@@ -53,7 +53,7 @@
         data-chapter-title="更多资料"
         data-filepath="iOS/More.md"
         data-basepath=".."
-        data-revision="Mon Dec 28 2015 19:22:23 GMT+0800 (CST)"
+        data-revision="Wed Dec 30 2015 11:22:23 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -1146,6 +1146,7 @@
 <li><a href="http://objccn.io/" target="_blank">http://objccn.io/</a></li>
 <li><a href="http://nshipster.cn" target="_blank">http://nshipster.cn</a></li>
 <li><a href="http://arigrant.com/" target="_blank">http://arigrant.com/</a></li>
+<li><a href="http://oncenote.com/" target="_blank">http://oncenote.com/</a></li>
 <li><a href="https://github.com/oa414/objc-zen-book-cn" target="_blank">https://github.com/oa414/objc-zen-book-cn</a></li>
 <li><a href="https://github.com/nixzhu/dev-blog" target="_blank">https://github.com/nixzhu/dev-blog</a></li>
 <li><a href="https://github.com/robovm/apple-ios-samples" target="_blank">https://github.com/robovm/apple-ios-samples</a> &#xFF08;&#x82F9;&#x679C;&#x5B98;&#x65B9; Sample &#x4EE3;&#x7801;&#x96C6;&#x5408;&#xFF09;</li>
