--- a/basic/network/HTTP.html
+++ b/basic/network/HTTP.html
@@ -53,7 +53,7 @@
         data-chapter-title="HTTP 协议"
         data-filepath="basic/network/HTTP.md"
         data-basepath="../.."
-        data-revision="Tue Jan 05 2016 14:37:07 GMT+0800 (CST)"
+        data-revision="Mon Jan 25 2016 21:16:23 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -1279,30 +1279,23 @@ Content-Length:112
 <li><p>URL&#x91CD;&#x5199;</p>
 <p>URL(&#x7EDF;&#x4E00;&#x8D44;&#x6E90;&#x5B9A;&#x4F4D;&#x7B26;)&#x662F;Web&#x4E0A;&#x7279;&#x5B9A;&#x9875;&#x9762;&#x7684;&#x5730;&#x5740;&#xFF0C;URL&#x91CD;&#x5199;&#x7684;&#x6280;&#x672F;&#x5C31;&#x662F;&#x5728;URL&#x7ED3;&#x5C3E;&#x6DFB;&#x52A0;&#x4E00;&#x4E2A;&#x9644;&#x52A0;&#x6570;&#x636E;&#x4EE5;&#x6807;&#x8BC6;&#x8BE5;&#x4F1A;&#x8BDD;,&#x628A;&#x4F1A;&#x8BDD;ID&#x901A;&#x8FC7;URL&#x7684;&#x4FE1;&#x606F;&#x4F20;&#x9012;&#x8FC7;&#x53BB;&#xFF0C;&#x4EE5;&#x4FBF;&#x5728;&#x670D;&#x52A1;&#x5668;&#x7AEF;&#x8FDB;&#x884C;&#x8BC6;&#x522B;&#x4E0D;&#x540C;&#x7684;&#x7528;&#x6237;&#x3002;</p>
 </li>
+<li><p>&#x9690;&#x85CF;&#x8868;&#x5355;&#x57DF;</p>
+<p>&#x5C06;&#x4F1A;&#x8BDD;ID&#x6DFB;&#x52A0;&#x5230;HTML&#x8868;&#x5355;&#x5143;&#x7D20;&#x4E2D;&#x63D0;&#x4EA4;&#x5230;&#x670D;&#x52A1;&#x5668;&#xFF0C;&#x6B64;&#x8868;&#x5355;&#x5143;&#x7D20;&#x5E76;&#x4E0D;&#x5728;&#x5BA2;&#x6237;&#x7AEF;&#x663E;&#x793A;</p>
+</li>
+<li><p>Cookie</p>
+<p> Cookie&#x662F;Web&#x670D;&#x52A1;&#x5668;&#x53D1;&#x9001;&#x7ED9;&#x5BA2;&#x6237;&#x7AEF;&#x7684;&#x4E00;&#x5C0F;&#x6BB5;&#x4FE1;&#x606F;&#xFF0C;&#x5BA2;&#x6237;&#x7AEF;&#x8BF7;&#x6C42;&#x65F6;&#x53EF;&#x4EE5;&#x8BFB;&#x53D6;&#x8BE5;&#x4FE1;&#x606F;&#x53D1;&#x9001;&#x5230;&#x670D;&#x52A1;&#x5668;&#x7AEF;&#xFF0C;&#x8FDB;&#x800C;&#x8FDB;&#x884C;&#x7528;&#x6237;&#x7684;&#x8BC6;&#x522B;&#x3002;&#x5BF9;&#x4E8E;&#x5BA2;&#x6237;&#x7AEF;&#x7684;&#x6BCF;&#x6B21;&#x8BF7;&#x6C42;&#xFF0C;&#x670D;&#x52A1;&#x5668;&#x90FD;&#x4F1A;&#x5C06;Cookie&#x53D1;&#x9001;&#x5230;&#x5BA2;&#x6237;&#x7AEF;,&#x5728;&#x5BA2;&#x6237;&#x7AEF;&#x53EF;&#x4EE5;&#x8FDB;&#x884C;&#x4FDD;&#x5B58;,&#x4EE5;&#x4FBF;&#x4E0B;&#x6B21;&#x4F7F;&#x7528;&#x3002;</p>
+<p> &#x5BA2;&#x6237;&#x7AEF;&#x53EF;&#x4EE5;&#x91C7;&#x7528;&#x4E24;&#x79CD;&#x65B9;&#x5F0F;&#x6765;&#x4FDD;&#x5B58;&#x8FD9;&#x4E2A;Cookie&#x5BF9;&#x8C61;&#xFF0C;&#x4E00;&#x79CD;&#x65B9;&#x5F0F;&#x662F;&#x4FDD;&#x5B58;&#x5728;&#x5BA2;&#x6237;&#x7AEF;&#x5185;&#x5B58;&#x4E2D;&#xFF0C;&#x79F0;&#x4E3A;&#x4E34;&#x65F6;Cookie&#xFF0C;&#x6D4F;&#x89C8;&#x5668;&#x5173;&#x95ED;&#x540E;&#x8FD9;&#x4E2A;Cookie&#x5BF9;&#x8C61;&#x5C06;&#x6D88;&#x5931;&#x3002;&#x53E6;&#x5916;&#x4E00;&#x79CD;&#x65B9;&#x5F0F;&#x662F;&#x4FDD;&#x5B58;&#x5728;&#x5BA2;&#x6237;&#x673A;&#x7684;&#x78C1;&#x76D8;&#x4E0A;&#xFF0C;&#x79F0;&#x4E3A;&#x6C38;&#x4E45;Cookie&#x3002;&#x4EE5;&#x540E;&#x5BA2;&#x6237;&#x7AEF;&#x53EA;&#x8981;&#x8BBF;&#x95EE;&#x8BE5;&#x7F51;&#x7AD9;&#xFF0C;&#x5C31;&#x4F1A;&#x5C06;&#x8FD9;&#x4E2A;Cookie&#x518D;&#x6B21;&#x53D1;&#x9001;&#x5230;&#x670D;&#x52A1;&#x5668;&#x4E0A;&#xFF0C;&#x524D;&#x63D0;&#x662F;&#x8FD9;&#x4E2A;Cookie&#x5728;&#x6709;&#x6548;&#x671F;&#x5185;&#xFF0C;&#x8FD9;&#x6837;&#x5C31;&#x5B9E;&#x73B0;&#x4E86;&#x5BF9;&#x5BA2;&#x6237;&#x7684;&#x8DDF;&#x8E2A;&#x3002;</p>
+<p> Cookie&#x662F;&#x53EF;&#x4EE5;&#x88AB;&#x7981;&#x6B62;&#x7684;&#x3002;</p>
+</li>
+<li><p>Session:</p>
+<p> &#x6BCF;&#x4E00;&#x4E2A;&#x7528;&#x6237;&#x90FD;&#x6709;&#x4E00;&#x4E2A;&#x4E0D;&#x540C;&#x7684;session&#xFF0C;&#x5404;&#x4E2A;&#x7528;&#x6237;&#x4E4B;&#x95F4;&#x662F;&#x4E0D;&#x80FD;&#x5171;&#x4EAB;&#x7684;&#xFF0C;&#x662F;&#x6BCF;&#x4E2A;&#x7528;&#x6237;&#x6240;&#x72EC;&#x4EAB;&#x7684;&#xFF0C;&#x5728;session&#x4E2D;&#x53EF;&#x4EE5;&#x5B58;&#x653E;&#x4FE1;&#x606F;&#x3002;</p>
+<p> &#x5728;&#x670D;&#x52A1;&#x5668;&#x7AEF;&#x4F1A;&#x521B;&#x5EFA;&#x4E00;&#x4E2A;session&#x5BF9;&#x8C61;&#xFF0C;&#x4EA7;&#x751F;&#x4E00;&#x4E2A;sessionID&#x6765;&#x6807;&#x8BC6;&#x8FD9;&#x4E2A;session&#x5BF9;&#x8C61;&#xFF0C;&#x7136;&#x540E;&#x5C06;&#x8FD9;&#x4E2A;sessionID&#x653E;&#x5165;&#x5230;Cookie&#x4E2D;&#x53D1;&#x9001;&#x5230;&#x5BA2;&#x6237;&#x7AEF;&#xFF0C;&#x4E0B;&#x4E00;&#x6B21;&#x8BBF;&#x95EE;&#x65F6;&#xFF0C;sessionID&#x4F1A;&#x53D1;&#x9001;&#x5230;&#x670D;&#x52A1;&#x5668;&#xFF0C;&#x5728;&#x670D;&#x52A1;&#x5668;&#x7AEF;&#x8FDB;&#x884C;&#x8BC6;&#x522B;&#x4E0D;&#x540C;&#x7684;&#x7528;&#x6237;&#x3002;</p>
+<p> Session&#x7684;&#x5B9E;&#x73B0;&#x4F9D;&#x8D56;&#x4E8E;Cookie&#xFF0C;&#x5982;&#x679C;Cookie&#x88AB;&#x7981;&#x7528;&#xFF0C;&#x90A3;&#x4E48;session&#x4E5F;&#x5C06;&#x5931;&#x6548;&#x3002;</p>
+</li>
 </ol>
 </li>
 </ol>
-<pre><code>2. &#x9690;&#x85CF;&#x8868;&#x5355;&#x57DF;
-
-   &#x5C06;&#x4F1A;&#x8BDD;ID&#x6DFB;&#x52A0;&#x5230;HTML&#x8868;&#x5355;&#x5143;&#x7D20;&#x4E2D;&#x63D0;&#x4EA4;&#x5230;&#x670D;&#x52A1;&#x5668;&#xFF0C;&#x6B64;&#x8868;&#x5355;&#x5143;&#x7D20;&#x5E76;&#x4E0D;&#x5728;&#x5BA2;&#x6237;&#x7AEF;&#x663E;&#x793A;
-
-
-3. Cookie
-
-    Cookie&#x662F;Web&#x670D;&#x52A1;&#x5668;&#x53D1;&#x9001;&#x7ED9;&#x5BA2;&#x6237;&#x7AEF;&#x7684;&#x4E00;&#x5C0F;&#x6BB5;&#x4FE1;&#x606F;&#xFF0C;&#x5BA2;&#x6237;&#x7AEF;&#x8BF7;&#x6C42;&#x65F6;&#x53EF;&#x4EE5;&#x8BFB;&#x53D6;&#x8BE5;&#x4FE1;&#x606F;&#x53D1;&#x9001;&#x5230;&#x670D;&#x52A1;&#x5668;&#x7AEF;&#xFF0C;&#x8FDB;&#x800C;&#x8FDB;&#x884C;&#x7528;&#x6237;&#x7684;&#x8BC6;&#x522B;&#x3002;&#x5BF9;&#x4E8E;&#x5BA2;&#x6237;&#x7AEF;&#x7684;&#x6BCF;&#x6B21;&#x8BF7;&#x6C42;&#xFF0C;&#x670D;&#x52A1;&#x5668;&#x90FD;&#x4F1A;&#x5C06;Cookie&#x53D1;&#x9001;&#x5230;&#x5BA2;&#x6237;&#x7AEF;,&#x5728;&#x5BA2;&#x6237;&#x7AEF;&#x53EF;&#x4EE5;&#x8FDB;&#x884C;&#x4FDD;&#x5B58;,&#x4EE5;&#x4FBF;&#x4E0B;&#x6B21;&#x4F7F;&#x7528;&#x3002;
-
-    &#x5BA2;&#x6237;&#x7AEF;&#x53EF;&#x4EE5;&#x91C7;&#x7528;&#x4E24;&#x79CD;&#x65B9;&#x5F0F;&#x6765;&#x4FDD;&#x5B58;&#x8FD9;&#x4E2A;Cookie&#x5BF9;&#x8C61;&#xFF0C;&#x4E00;&#x79CD;&#x65B9;&#x5F0F;&#x662F;&#x4FDD;&#x5B58;&#x5728;&#x5BA2;&#x6237;&#x7AEF;&#x5185;&#x5B58;&#x4E2D;&#xFF0C;&#x79F0;&#x4E3A;&#x4E34;&#x65F6;Cookie&#xFF0C;&#x6D4F;&#x89C8;&#x5668;&#x5173;&#x95ED;&#x540E;&#x8FD9;&#x4E2A;Cookie&#x5BF9;&#x8C61;&#x5C06;&#x6D88;&#x5931;&#x3002;&#x53E6;&#x5916;&#x4E00;&#x79CD;&#x65B9;&#x5F0F;&#x662F;&#x4FDD;&#x5B58;&#x5728;&#x5BA2;&#x6237;&#x673A;&#x7684;&#x78C1;&#x76D8;&#x4E0A;&#xFF0C;&#x79F0;&#x4E3A;&#x6C38;&#x4E45;Cookie&#x3002;&#x4EE5;&#x540E;&#x5BA2;&#x6237;&#x7AEF;&#x53EA;&#x8981;&#x8BBF;&#x95EE;&#x8BE5;&#x7F51;&#x7AD9;&#xFF0C;&#x5C31;&#x4F1A;&#x5C06;&#x8FD9;&#x4E2A;Cookie&#x518D;&#x6B21;&#x53D1;&#x9001;&#x5230;&#x670D;&#x52A1;&#x5668;&#x4E0A;&#xFF0C;&#x524D;&#x63D0;&#x662F;&#x8FD9;&#x4E2A;Cookie&#x5728;&#x6709;&#x6548;&#x671F;&#x5185;&#xFF0C;&#x8FD9;&#x6837;&#x5C31;&#x5B9E;&#x73B0;&#x4E86;&#x5BF9;&#x5BA2;&#x6237;&#x7684;&#x8DDF;&#x8E2A;&#x3002;
-
-    Cookie&#x662F;&#x53EF;&#x4EE5;&#x88AB;&#x7981;&#x6B62;&#x7684;&#x3002;
-
-4. Session:
-
-    &#x6BCF;&#x4E00;&#x4E2A;&#x7528;&#x6237;&#x90FD;&#x6709;&#x4E00;&#x4E2A;&#x4E0D;&#x540C;&#x7684;session&#xFF0C;&#x5404;&#x4E2A;&#x7528;&#x6237;&#x4E4B;&#x95F4;&#x662F;&#x4E0D;&#x80FD;&#x5171;&#x4EAB;&#x7684;&#xFF0C;&#x662F;&#x6BCF;&#x4E2A;&#x7528;&#x6237;&#x6240;&#x72EC;&#x4EAB;&#x7684;&#xFF0C;&#x5728;session&#x4E2D;&#x53EF;&#x4EE5;&#x5B58;&#x653E;&#x4FE1;&#x606F;&#x3002;
-
-    &#x5728;&#x670D;&#x52A1;&#x5668;&#x7AEF;&#x4F1A;&#x521B;&#x5EFA;&#x4E00;&#x4E2A;session&#x5BF9;&#x8C61;&#xFF0C;&#x4EA7;&#x751F;&#x4E00;&#x4E2A;sessionID&#x6765;&#x6807;&#x8BC6;&#x8FD9;&#x4E2A;session&#x5BF9;&#x8C61;&#xFF0C;&#x7136;&#x540E;&#x5C06;&#x8FD9;&#x4E2A;sessionID&#x653E;&#x5165;&#x5230;Cookie&#x4E2D;&#x53D1;&#x9001;&#x5230;&#x5BA2;&#x6237;&#x7AEF;&#xFF0C;&#x4E0B;&#x4E00;&#x6B21;&#x8BBF;&#x95EE;&#x65F6;&#xFF0C;sessionID&#x4F1A;&#x53D1;&#x9001;&#x5230;&#x670D;&#x52A1;&#x5668;&#xFF0C;&#x5728;&#x670D;&#x52A1;&#x5668;&#x7AEF;&#x8FDB;&#x884C;&#x8BC6;&#x522B;&#x4E0D;&#x540C;&#x7684;&#x7528;&#x6237;&#x3002;
-
-    Session&#x7684;&#x5B9E;&#x73B0;&#x4F9D;&#x8D56;&#x4E8E;Cookie&#xFF0C;&#x5982;&#x679C;Cookie&#x88AB;&#x7981;&#x7528;&#xFF0C;&#x90A3;&#x4E48;session&#x4E5F;&#x5C06;&#x5931;&#x6548;&#x3002;
-</code></pre><h2 id="&#x8DE8;&#x7AD9;&#x653B;&#x51FB;">&#x8DE8;&#x7AD9;&#x653B;&#x51FB;</h2>
+<h2 id="&#x8DE8;&#x7AD9;&#x653B;&#x51FB;">&#x8DE8;&#x7AD9;&#x653B;&#x51FB;</h2>
 <ul>
 <li><p>CSRF&#xFF08;Cross-site request forgery&#xFF0C;&#x8DE8;&#x7AD9;&#x8BF7;&#x6C42;&#x4F2A;&#x9020;&#xFF09;</p>
 <p>  CSRF(XSRF) &#x987E;&#x540D;&#x601D;&#x4E49;&#xFF0C;&#x662F;&#x4F2A;&#x9020;&#x8BF7;&#x6C42;&#xFF0C;&#x5192;&#x5145;&#x7528;&#x6237;&#x5728;&#x7AD9;&#x5185;&#x7684;&#x6B63;&#x5E38;&#x64CD;&#x4F5C;&#x3002;</p>
@@ -1328,11 +1321,11 @@ Content-Length:112
 <p>CSRF&#x653B;&#x51FB;&#x8981;&#x6210;&#x529F;&#x7684;&#x6761;&#x4EF6;&#x5728;&#x4E8E;&#x653B;&#x51FB;&#x8005;&#x80FD;&#x591F;&#x9884;&#x6D4B;&#x6240;&#x6709;&#x7684;&#x53C2;&#x6570;&#x4ECE;&#x800C;&#x6784;&#x9020;&#x51FA;&#x5408;&#x6CD5;&#x7684;&#x8BF7;&#x6C42;&#x3002;&#x6240;&#x4EE5;&#x6839;&#x636E;&#x4E0D;&#x53EF;&#x9884;&#x6D4B;&#x6027;&#x539F;&#x5219;&#xFF0C;&#x6211;&#x4EEC;&#x53EF;&#x4EE5;&#x5BF9;&#x53C2;&#x6570;&#x8FDB;&#x884C;&#x52A0;&#x5BC6;&#x4ECE;&#x800C;&#x9632;&#x6B62;CSRF&#x653B;&#x51FB;&#x3002;</p>
 <p>&#x53E6;&#x4E00;&#x4E2A;&#x66F4;&#x901A;&#x7528;&#x7684;&#x505A;&#x6CD5;&#x662F;&#x4FDD;&#x6301;&#x539F;&#x6709;&#x53C2;&#x6570;&#x4E0D;&#x53D8;&#xFF0C;&#x53E6;&#x5916;&#x6DFB;&#x52A0;&#x4E00;&#x4E2A;&#x53C2;&#x6570;Token&#xFF0C;&#x5176;&#x503C;&#x662F;&#x968F;&#x673A;&#x7684;&#x3002;&#x8FD9;&#x6837;&#x653B;&#x51FB;&#x8005;&#x56E0;&#x4E3A;&#x4E0D;&#x77E5;&#x9053;Token&#x800C;&#x65E0;&#x6CD5;&#x6784;&#x9020;&#x51FA;&#x5408;&#x6CD5;&#x7684;&#x8BF7;&#x6C42;&#x8FDB;&#x884C;&#x653B;&#x51FB;&#x3002;</p>
 <p>Token &#x4F7F;&#x7528;&#x539F;&#x5219;</p>
-</li>
-<li><p>Token &#x8981;&#x8DB3;&#x591F;&#x968F;&#x673A;&#x2014;&#x2014;&#x2014;&#x2014;&#x53EA;&#x6709;&#x8FD9;&#x6837;&#x624D;&#x7B97;&#x4E0D;&#x53EF;&#x9884;&#x6D4B;</p>
-</li>
+<ul>
+<li>Token &#x8981;&#x8DB3;&#x591F;&#x968F;&#x673A;&#x2014;&#x2014;&#x2014;&#x2014;&#x53EA;&#x6709;&#x8FD9;&#x6837;&#x624D;&#x7B97;&#x4E0D;&#x53EF;&#x9884;&#x6D4B;</li>
 <li>Token &#x662F;&#x4E00;&#x6B21;&#x6027;&#x7684;&#xFF0C;&#x5373;&#x6BCF;&#x6B21;&#x8BF7;&#x6C42;&#x6210;&#x529F;&#x540E;&#x8981;&#x66F4;&#x65B0;Token&#x2014;&#x2014;&#x2014;&#x2014;&#x8FD9;&#x6837;&#x53EF;&#x4EE5;&#x589E;&#x52A0;&#x653B;&#x51FB;&#x96BE;&#x5EA6;&#xFF0C;&#x589E;&#x52A0;&#x9884;&#x6D4B;&#x96BE;&#x5EA6;</li>
-<li><p>Token &#x8981;&#x6CE8;&#x610F;&#x4FDD;&#x5BC6;&#x6027;&#x2014;&#x2014;&#x2014;&#x2014;&#x654F;&#x611F;&#x64CD;&#x4F5C;&#x4F7F;&#x7528; post&#xFF0C;&#x9632;&#x6B62; Token &#x51FA;&#x73B0;&#x5728; URL &#x4E2D;</p>
+<li>Token &#x8981;&#x6CE8;&#x610F;&#x4FDD;&#x5BC6;&#x6027;&#x2014;&#x2014;&#x2014;&#x2014;&#x654F;&#x611F;&#x64CD;&#x4F5C;&#x4F7F;&#x7528; post&#xFF0C;&#x9632;&#x6B62; Token &#x51FA;&#x73B0;&#x5728; URL &#x4E2D;</li>
+</ul>
 <p><strong>&#x6CE8;&#x610F;</strong>&#xFF1A;&#x8FC7;&#x6EE4;&#x7528;&#x6237;&#x8F93;&#x5165;&#x7684;&#x5185;&#x5BB9;<strong>&#x4E0D;&#x80FD;</strong>&#x963B;&#x6321; csrf&#xFF0C;&#x6211;&#x4EEC;&#x9700;&#x8981;&#x505A;&#x7684;&#x662F;&#x8FC7;&#x6EE4;&#x8BF7;&#x6C42;&#x7684;<strong>&#x6765;&#x6E90;</strong>&#x3002;</p>
 </li>
 </ul>
