update 2016年 3月17日 星期四 14时10分38秒 CST

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         data-chapter-title="Introduction"
         data-filepath="README.md"
         data-basepath="."
-        data-revision="Thu Mar 17 2016 13:53:05 GMT+0800 (CST)"
+        data-revision="Thu Mar 17 2016 14:10:36 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -1141,7 +1141,7 @@
                         <h1 id="&#x7B14;&#x8BD5;&#x9762;&#x8BD5;&#x77E5;&#x8BC6;&#x6574;&#x7406;">&#x7B14;&#x8BD5;&#x9762;&#x8BD5;&#x77E5;&#x8BC6;&#x6574;&#x7406;</h1>
 <p>&#x672C;&#x6587;&#x6863;&#x4F7F;&#x7528; <a href="https://github.com/GitbookIO/gitbook" target="_blank">Gitbook</a> &#x5236;&#x4F5C;&#xFF0C;<a href="https://github.com/HIT-Alibaba/interview" target="_blank">Github &#x4ED3;&#x5E93;&#x5730;&#x5740;</a>&#x3002;</p>
 <p>&#x6240;&#x6709;&#x5F15;&#x7528;&#x5185;&#x5BB9;&#x7248;&#x6743;&#x5F52;&#x539F;&#x4F5C;&#x8005;&#x6240;&#x6709;&#x3002;</p>
-<p>&#x4F7F;&#x7528; <a href="http://creativecommons.org/licenses/by/3.0/cn/" target="_blank">&#x77E5;&#x8BC6;&#x5171;&#x4EAB;&#x201C;&#x7F72;&#x540D; 3.0 &#x4E2D;&#x56FD;&#x5927;&#x9646;&#x201D;&#x8BB8;&#x53EF;&#x534F;&#x8BAE;</a> &#x6388;&#x6743;&#x3002;</p>
+<p>&#x4F7F;&#x7528; <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/cn/" target="_blank">&#x77E5;&#x8BC6;&#x5171;&#x4EAB;&#x201C;&#x7F72;&#x540D;-&#x975E;&#x5546;&#x4E1A;&#x6027;&#x4F7F;&#x7528;-&#x76F8;&#x540C;&#x65B9;&#x5F0F;&#x5171;&#x4EAB; 3.0 &#x4E2D;&#x56FD;&#x5927;&#x9646;&#x201D;&#x8BB8;&#x53EF;&#x534F;&#x8BAE;</a> &#x6388;&#x6743;&#x3002;</p>
 <h3 id="&#x8D21;&#x732E;&#x8005;&#xFF1A;">&#x8D21;&#x732E;&#x8005;&#xFF1A;</h3>
 <ul>
 <li><a href="https://github.com/skyline75489" target="_blank">skyline75489</a></li>
