update 2016年 3月22日 星期二 15时00分51秒 CST

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         data-chapter-title="Introduction"
         data-filepath="README.md"
         data-basepath="."
-        data-revision="Tue Mar 22 2016 14:35:20 GMT+0800 (CST)"
+        data-revision="Tue Mar 22 2016 15:00:49 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -1148,6 +1148,7 @@
 <li><a href="https://github.com/winlandiano" target="_blank">winlandiano</a></li>
 <li><a href="https://github.com/dodola" target="_blank">dodola</a></li>
 <li><a href="https://github.com/AveryLiu" target="_blank">AveryLiu</a></li>
+<li><a href="https://github.com/AlanMelody" target="_blank">AlanMelody</a></li>
 </ul>
 
                     
