--- a/iOS/ObjC-Basic/MM.html
+++ b/iOS/ObjC-Basic/MM.html
@@ -53,7 +53,7 @@
         data-chapter-title="Objective-C 内存管理"
         data-filepath="iOS/ObjC-Basic/MM.md"
         data-basepath="../.."
-        data-revision="Fri Apr 15 2016 08:38:46 GMT+0800 (CST)"
+        data-revision="Mon Apr 18 2016 16:19:29 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -1179,7 +1179,11 @@
 </tr>
 </tbody>
 </table>
-<p><strong>&#x6CE8;&#x610F;&#xFF1A;</strong>&#x8FD9;&#x4E9B;&#x5BF9;&#x8C61;&#x64CD;&#x4F5C;&#x7684;&#x65B9;&#x6CD5;&#x5176;&#x5B9E;&#x5E76;&#x4E0D;&#x5305;&#x62EC;&#x5728;OC&#x4E2D;&#xFF0C;&#x800C;&#x662F;&#x5305;&#x542B;&#x5728;Cocoa&#x6846;&#x67B6;&#x4E0B;&#x7684;Foundation&#x6846;&#x67B6;&#x4E2D;&#x3002;</p>
+<p><strong>&#x6CE8;&#x610F;&#xFF1A;</strong></p>
+<ul>
+<li>&#x8FD9;&#x4E9B;&#x5BF9;&#x8C61;&#x64CD;&#x4F5C;&#x7684;&#x65B9;&#x6CD5;&#x5176;&#x5B9E;&#x5E76;&#x4E0D;&#x5305;&#x62EC;&#x5728;OC&#x4E2D;&#xFF0C;&#x800C;&#x662F;&#x5305;&#x542B;&#x5728;Cocoa&#x6846;&#x67B6;&#x4E0B;&#x7684;Foundation&#x6846;&#x67B6;&#x4E2D;&#x3002;</li>
+<li>&#x5BF9;&#x8C61;&#x7684; <code>reatinCount</code> &#x5C5E;&#x6027;&#x5E76;&#x6CA1;&#x6709;&#x5B9E;&#x9645;&#x4E0A;&#x7684;&#x53C2;&#x8003;&#x4EF7;&#x503C;&#xFF0C;&#x53C2;&#x8003;&#x82F9;&#x679C;&#x5B98;&#x65B9;&#x6587;&#x6863;<a href="https://developer.apple.com/library/mac/documentation/Cocoa/Conceptual/MemoryMgmt/Articles/mmPractical.html" target="_blank">&#x300A;Practical Memory Management&#x300B;</a>.</li>
+</ul>
 <h4 id="&#x56DB;&#x4E2A;&#x6CD5;&#x5219;">&#x56DB;&#x4E2A;&#x6CD5;&#x5219;</h4>
 <ul>
 <li>&#x81EA;&#x5DF1;&#x751F;&#x6210;&#x7684;&#x5BF9;&#x8C61;&#xFF0C;&#x81EA;&#x5DF1;&#x6301;&#x6709;&#x3002;</li>
